View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0032850 | Community | OCCT:Modeling Algorithms | public | 2022-02-21 12:34 | 2022-02-28 14:32 |
Reporter | Manycore | Assigned To | ifv | ||
Priority | normal | Severity | minor | ||
Status | resolved | Resolution | open | ||
Platform | Windows | OS | VC++ 2015 | ||
Product Version | 7.7.0 | ||||
Target Version | 7.7.0 | ||||
Summary | 0032850: Modeling Algorithms - Surface Surface Intersect Lost one line | ||||
Description | Implict-Implict Intersect Lost one line due to lost one IntPatch_Point | ||||
Steps To Reproduce | TopoDS_Shape Sh1; TopoDS_Shape Sh2; BRep_Builder B; BRepTools::Read(Sh1, "C:\\Users\\Administrator.3AQY4VP0FVYRFVT\\Desktop\\cylinder1.brep", B); BRepTools::Read(Sh2, "C:\\Users\\Administrator.3AQY4VP0FVYRFVT\\Desktop\\cylinder2.brep", B); TopoDS_Face face1 = TopoDS::Face(Sh1); TopoDS_Face face2 = TopoDS::Face(Sh2); auto inter = new IntTools_FaceFace(); inter->Perform(face1, face2); // expect four lines , but return 3 lines | ||||
Tags | No tags attached. | ||||
Test case number | |||||
related to | 0000569 | closed | Open CASCADE | Can not intersect trimmed plane and cone surfaces . |
|
cylinder1.brep (2,388 bytes) cylinder2.brep (2,387 bytes) |
|
the first picture shows that only 3 lines return, the second and third pictures show the right result Imp_Imp_Intersection_lost_one_IntPatch_Point_.png (26,835 bytes) Imp_Imp_Intersection_should_return_4_lines.png (33,481 bytes) enlarge_local.png (11,746 bytes) |
|
fix bug Referenceļ¼ IntTools_EdgeFace::CheckTouch function |
|
Branch CR32850 has been created by Manycore. SHA-1: f9bc720991cb7c3d7c7a1de415800b1e467e46c5 Detailed log of new commits: Author: gelin Date: Mon Feb 28 13:25:45 2022 +0800 Merge branch 'master' of ssh://git.dev.opencascade.org/occt Author: gelin Date: Mon Feb 28 12:28:59 2022 +0800 0032850: Modeling Algorithms - Surface Surface Intersect Lost one line |
|
Branch CR32850 has been deleted by Manycore. SHA-1: f9bc720991cb7c3d7c7a1de415800b1e467e46c5 |
|
Branch CR32850 has been created by Manycore. SHA-1: dfbf6b9341d437c6b18fe547871ad41ec270bb1b Detailed log of new commits: Author: gelin Date: Mon Feb 28 14:13:31 2022 +0800 0032850: Modeling Algorithms - Surface Surface Intersect Lost one line |
|
Branch CR32850 has been updated by Manycore. SHA-1: 3406e87f0aa8823ad3cd627c4b0a1e495b88b014 Detailed log of new commits: Author: gelin Date: Mon Feb 28 14:43:54 2022 +0800 code modified |
Date Modified | Username | Field | Change |
---|---|---|---|
2022-02-21 12:34 | Manycore | New Issue | |
2022-02-21 12:34 | Manycore | Assigned To | => Manycore |
2022-02-21 12:34 | Manycore | File Added: cylinder1.brep | |
2022-02-21 12:34 | Manycore | File Added: cylinder2.brep | |
2022-02-21 12:39 | Manycore | Note Added: 0107006 | |
2022-02-21 12:39 | Manycore | File Added: Imp_Imp_Intersection_lost_one_IntPatch_Point_.png | |
2022-02-21 12:39 | Manycore | File Added: Imp_Imp_Intersection_should_return_4_lines.png | |
2022-02-21 12:39 | Manycore | File Added: enlarge_local.png | |
2022-02-28 05:52 | Manycore | Relationship added | related to 0000569 |
2022-02-28 07:06 | Manycore | Note Added: 0107091 | |
2022-02-28 08:27 | git | Note Added: 0107092 | |
2022-02-28 08:31 | git | Note Added: 0107093 | |
2022-02-28 09:17 | git | Note Added: 0107094 | |
2022-02-28 09:44 | git | Note Added: 0107096 | |
2022-02-28 09:47 | Manycore | Assigned To | Manycore => msv |
2022-02-28 09:47 | Manycore | Status | new => resolved |
2022-02-28 14:32 | msv | Assigned To | msv => ifv |